--- a/deployments/create-artifact.yaml
+++ b/deployments/create-artifact.yaml
@@ -5,8 +5,6 @@ metadata:
     deployment.kubernetes.io/revision: "1"
     meta.helm.sh/release-name: mender
     meta.helm.sh/release-namespace: default
-  creationTimestamp: "2021-04-07T17:00:30Z"
-  generation: 1
   labels:
     app.kubernetes.io/component: workflows
     app.kubernetes.io/instance: mender
@@ -14,115 +12,8 @@ metadata:
     app.kubernetes.io/name: create-artifact-worker
     app.kubernetes.io/part-of: mender
     helm.sh/chart: mender
-  managedFields:
-  - apiVersion: apps/v1
-    fieldsType: FieldsV1
-    fieldsV1:
-      f:metadata:
-        f:annotations:
-          .: {}
-          f:meta.helm.sh/release-name: {}
-          f:meta.helm.sh/release-namespace: {}
-        f:labels:
-          .: {}
-          f:app.kubernetes.io/component: {}
-          f:app.kubernetes.io/instance: {}
-          f:app.kubernetes.io/managed-by: {}
-          f:app.kubernetes.io/name: {}
-          f:app.kubernetes.io/part-of: {}
-          f:helm.sh/chart: {}
-      f:spec:
-        f:progressDeadlineSeconds: {}
-        f:replicas: {}
-        f:revisionHistoryLimit: {}
-        f:selector: {}
-        f:strategy:
-          f:rollingUpdate:
-            .: {}
-            f:maxSurge: {}
-            f:maxUnavailable: {}
-          f:type: {}
-        f:template:
-          f:metadata:
-            f:labels:
-              .: {}
-              f:app.kubernetes.io/name: {}
-          f:spec:
-            f:containers:
-              k:{"name":"workflows"}:
-                .: {}
-                f:command: {}
-                f:env:
-                  .: {}
-                  k:{"name":"CREATE_ARTIFACT_DEPLOYMENTS_URL"}:
-                    .: {}
-                    f:name: {}
-                    f:value: {}
-                  k:{"name":"CREATE_ARTIFACT_GATEWAY_URL"}:
-                    .: {}
-                    f:name: {}
-                    f:value: {}
-                f:envFrom: {}
-                f:image: {}
-                f:imagePullPolicy: {}
-                f:name: {}
-                f:resources:
-                  .: {}
-                  f:limits:
-                    .: {}
-                    f:cpu: {}
-                    f:memory: {}
-                  f:requests:
-                    .: {}
-                    f:cpu: {}
-                    f:memory: {}
-                f:terminationMessagePath: {}
-                f:terminationMessagePolicy: {}
-            f:dnsPolicy: {}
-            f:restartPolicy: {}
-            f:schedulerName: {}
-            f:securityContext: {}
-            f:terminationGracePeriodSeconds: {}
-    manager: Go-http-client
-    operation: Update
-    time: "2021-04-07T17:00:30Z"
-  - apiVersion: apps/v1
-    fieldsType: FieldsV1
-    fieldsV1:
-      f:metadata:
-        f:annotations:
-          f:deployment.kubernetes.io/revision: {}
-      f:status:
-        f:availableReplicas: {}
-        f:conditions:
-          .: {}
-          k:{"type":"Available"}:
-            .: {}
-            f:lastTransitionTime: {}
-            f:lastUpdateTime: {}
-            f:message: {}
-            f:reason: {}
-            f:status: {}
-            f:type: {}
-          k:{"type":"Progressing"}:
-            .: {}
-            f:lastTransitionTime: {}
-            f:lastUpdateTime: {}
-            f:message: {}
-            f:reason: {}
-            f:status: {}
-            f:type: {}
-        f:observedGeneration: {}
-        f:readyReplicas: {}
-        f:replicas: {}
-        f:updatedReplicas: {}
-    manager: kube-controller-manager
-    operation: Update
-    time: "2021-04-07T17:00:38Z"
   name: create-artifact-worker
   namespace: default
-  resourceVersion: "8912"
-  uid: c87371fc-9ea7-4fb9-b920-3845be9a7b2a
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
@@ -171,7 +62,7 @@ spec:
         terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
-      schedulerName: default-scheduler
+      #schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
 status:
