--- a/secrets/smtp.yaml
+++ b/secrets/smtp.yaml
@@ -1,21 +1,34 @@
 apiVersion: v1
-kind: Service
+data:
+  EMAIL_SENDER: cm9vdEBsb2NhbGhvc3Q=
+  SMTP_ADDRESS: c210cC5tYWlsdHJhcC5pbw==
+  SMTP_LOGIN: bnVsbA==
+  SMTP_PASSWORD: bnVsbA==
+  SMTP_SSL: ZmFsc2U=
+kind: Secret
 metadata:
   annotations:
     meta.helm.sh/release-name: mender
     meta.helm.sh/release-namespace: default
   creationTimestamp: "2021-04-07T17:00:30Z"
   labels:
-    app.kubernetes.io/component: inventory
+    app.kubernetes.io/component: secrets
     app.kubernetes.io/instance: mender
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: inventory-svc
+    app.kubernetes.io/name: smtp
     app.kubernetes.io/part-of: mender
     helm.sh/chart: mender
   managedFields:
   - apiVersion: v1
     fieldsType: FieldsV1
     fieldsV1:
+      f:data:
+        .: {}
+        f:EMAIL_SENDER: {}
+        f:SMTP_ADDRESS: {}
+        f:SMTP_LOGIN: {}
+        f:SMTP_PASSWORD: {}
+        f:SMTP_SSL: {}
       f:metadata:
         f:annotations:
           .: {}
@@ -29,37 +42,12 @@ metadata:
           f:app.kubernetes.io/name: {}
           f:app.kubernetes.io/part-of: {}
           f:helm.sh/chart: {}
-      f:spec:
-        f:ports:
-          .: {}
-          k:{"port":8080,"protocol":"TCP"}:
-            .: {}
-            f:port: {}
-            f:protocol: {}
-            f:targetPort: {}
-        f:selector:
-          .: {}
-          f:app.kubernetes.io/name: {}
-        f:sessionAffinity: {}
-        f:type: {}
+      f:type: {}
     manager: Go-http-client
     operation: Update
     time: "2021-04-07T17:00:30Z"
-  name: mender-inventory
+  name: smtp
   namespace: default
-  resourceVersion: "8726"
-  uid: 4c24b1bc-58df-4756-88fb-9709f4e5ba46
-spec:
-#  clusterIP: 10.105.43.178
-#  clusterIPs:
- # - 10.105.43.178
-  ports:
-  - port: 8080
-    protocol: TCP
-    targetPort: 8080
-  selector:
-    app.kubernetes.io/name: inventory
-  sessionAffinity: None
-  type: ClusterIP
-status:
-  loadBalancer: {}
+  resourceVersion: "8701"
+  uid: bd297dda-87ff-4e25-a9d3-4477cf76a40e
+type: Opaque
