--- a/secrets/minio.yaml
+++ b/secrets/minio.yaml
@@ -1,5 +1,8 @@
 apiVersion: v1
-kind: Service
+data:
+  accesskey: bXlhY2Nlc3NrZXk=
+  secretkey: bXlzZWNyZXRrZXk=
+kind: Secret
 metadata:
   annotations:
     meta.helm.sh/release-name: minio
@@ -15,6 +18,10 @@ metadata:
   - apiVersion: v1
     fieldsType: FieldsV1
     fieldsV1:
+      f:data:
+        .: {}
+        f:accesskey: {}
+        f:secretkey: {}
       f:metadata:
         f:annotations:
           .: {}
@@ -27,41 +34,12 @@ metadata:
           f:chart: {}
           f:heritage: {}
           f:release: {}
-      f:spec:
-        f:ports:
-          .: {}
-          k:{"port":9000,"protocol":"TCP"}:
-            .: {}
-            f:name: {}
-            f:port: {}
-            f:protocol: {}
-            f:targetPort: {}
-        f:selector:
-          .: {}
-          f:app: {}
-          f:release: {}
-        f:sessionAffinity: {}
-        f:type: {}
+      f:type: {}
     manager: Go-http-client
     operation: Update
     time: "2021-04-07T16:59:35Z"
   name: minio
   namespace: default
-  resourceVersion: "8626"
-  uid: 5240faa8-b1f4-499b-ba8f-6b6da4b8b201
-spec:
-#  clusterIP: 10.111.218.104
- # clusterIPs:
- # - 10.111.218.104
-  ports:
-  - name: http
-    port: 9000
-    protocol: TCP
-    targetPort: 9000
-  selector:
-    app: minio
-    release: minio
-  sessionAffinity: None
-  type: ClusterIP
-status:
-  loadBalancer: {}
+  resourceVersion: "8610"
+  uid: a2ea3084-0c8b-4a68-acd9-1269aa90a9ca
+type: Opaque
