--- a/secrets/s3-artifacts.yaml
+++ b/secrets/s3-artifacts.yaml
@@ -1,21 +1,32 @@
 apiVersion: v1
-kind: Service
+data:
+  AWS_AUTH_KEY: bXlhY2Nlc3NrZXk=
+  AWS_AUTH_SECRET: bXlzZWNyZXRrZXk=
+  AWS_BUCKET: bWVuZGVyLWFydGlmYWN0cw==
+  AWS_URI: aHR0cDovL21pbmlvOjkwMDA=
+kind: Secret
 metadata:
   annotations:
     meta.helm.sh/release-name: mender
     meta.helm.sh/release-namespace: default
   creationTimestamp: "2021-04-07T17:00:30Z"
   labels:
-    app.kubernetes.io/component: inventory
+    app.kubernetes.io/component: secrets
     app.kubernetes.io/instance: mender
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: inventory-svc
+    app.kubernetes.io/name: s3-artifacts
     app.kubernetes.io/part-of: mender
     helm.sh/chart: mender
   managedFields:
   - apiVersion: v1
     fieldsType: FieldsV1
     fieldsV1:
+      f:data:
+        .: {}
+        f:AWS_AUTH_KEY: {}
+        f:AWS_AUTH_SECRET: {}
+        f:AWS_BUCKET: {}
+        f:AWS_URI: {}
       f:metadata:
         f:annotations:
           .: {}
@@ -29,37 +40,12 @@ metadata:
           f:app.kubernetes.io/name: {}
           f:app.kubernetes.io/part-of: {}
           f:helm.sh/chart: {}
-      f:spec:
-        f:ports:
-          .: {}
-          k:{"port":8080,"protocol":"TCP"}:
-            .: {}
-            f:port: {}
-            f:protocol: {}
-            f:targetPort: {}
-        f:selector:
-          .: {}
-          f:app.kubernetes.io/name: {}
-        f:sessionAffinity: {}
-        f:type: {}
+      f:type: {}
     manager: Go-http-client
     operation: Update
     time: "2021-04-07T17:00:30Z"
-  name: mender-inventory
+  name: s3-artifacts
   namespace: default
-  resourceVersion: "8726"
-  uid: 4c24b1bc-58df-4756-88fb-9709f4e5ba46
-spec:
-#  clusterIP: 10.105.43.178
-#  clusterIPs:
- # - 10.105.43.178
-  ports:
-  - port: 8080
-    protocol: TCP
-    targetPort: 8080
-  selector:
-    app.kubernetes.io/name: inventory
-  sessionAffinity: None
-  type: ClusterIP
-status:
-  loadBalancer: {}
+  resourceVersion: "8699"
+  uid: 68ab7a80-a31b-4638-af6f-a8fa3410653c
+type: Opaque
