--- a/pvc/mongodb.yaml
+++ b/pvc/mongodb.yaml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  annotations:
-    meta.helm.sh/release-name: mongodb
-    meta.helm.sh/release-namespace: default
-    pv.kubernetes.io/bind-completed: "yes"
-    pv.kubernetes.io/bound-by-controller: "yes"
-    volume.beta.kubernetes.io/storage-provisioner: k8s.io/minikube-hostpath
+#  annotations:
+#    meta.helm.sh/release-name: mongodb
+#    meta.helm.sh/release-namespace: default
+#    pv.kubernetes.io/bind-completed: "yes"
+#    pv.kubernetes.io/bound-by-controller: "yes"
+#    volume.beta.kubernetes.io/storage-provisioner: k8s.io/minikube-hostpath
   labels:
-    app.kubernetes.io/component: mongodb
-    app.kubernetes.io/instance: mongodb
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: mongodb
-    helm.sh/chart: mongodb-10.12.1
+#    app.kubernetes.io/component: mongodb
+#    app.kubernetes.io/instance: mongodb
+#    app.kubernetes.io/managed-by: Helm
+#    app.kubernetes.io/name: mongodb
+#    helm.sh/chart: mongodb-10.12.1
   name: mongodb
   namespace: default
 spec:
