--- a/extracted_from_helm/mongo.yaml
+++ b/extracted_from_helm/mongo.yaml
@@ -26,10 +26,10 @@ metadata:
     app.kubernetes.io/component: mongodb
 spec:
   accessModes:
-    - “ReadWriteOnce”
+    - "ReadWriteOnce"
   resources:
     requests:
-      storage: “8Gi”
+      storage: "8Gi"
 ---
 # Source: mongodb/templates/standalone/svc.yaml
 apiVersion: v1
@@ -84,9 +84,11 @@ spec:
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/component: mongodb
     spec:
+      
       serviceAccountName: mongodb
       affinity:
         podAffinity:
+          
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - podAffinityTerm:
@@ -96,35 +98,36 @@ spec:
                     app.kubernetes.io/instance: mongodb
                     app.kubernetes.io/component: mongodb
                 namespaces:
-                  - “default”
+                  - "default"
                 topologyKey: kubernetes.io/hostname
               weight: 1
         nodeAffinity:
+          
       securityContext:
         fsGroup: 1001
         sysctls: []
       containers:
         - name: mongodb
           image: docker.io/bitnami/mongodb:4.4.5-debian-10-r0
-          imagePullPolicy: “IfNotPresent”
+          imagePullPolicy: "IfNotPresent"
           securityContext:
             runAsNonRoot: true
             runAsUser: 1001
           env:
             - name: BITNAMI_DEBUG
-              value: “false”
+              value: "false"
             - name: ALLOW_EMPTY_PASSWORD
-              value: “yes”
+              value: "yes"
             - name: MONGODB_SYSTEM_LOG_VERBOSITY
-              value: “0”
+              value: "0"
             - name: MONGODB_DISABLE_SYSTEM_LOG
-              value: “no”
+              value: "no"
             - name: MONGODB_DISABLE_JAVASCRIPT
-              value: “no”
+              value: "no"
             - name: MONGODB_ENABLE_IPV6
-              value: “no”
+              value: "no"
             - name: MONGODB_ENABLE_DIRECTORY_PER_DB
-              value: “no”
+              value: "no"
           ports:
             - name: mongodb
               containerPort: 27017
@@ -134,7 +137,7 @@ spec:
                 - mongo
                 - --disableImplicitSessions
                 - --eval
-                - “db.adminCommand(‘ping’)”
+                - "db.adminCommand('ping')"
             initialDelaySeconds: 30
             periodSeconds: 10
             timeoutSeconds: 5
@@ -146,7 +149,7 @@ spec:
                 - bash
                 - -ec
                 - |
-                  mongo --disableImplicitSessions $TLS_OPTIONS --eval ‘db.hello().isWritablePrimary || db.hello().secondary’ | grep -q ‘true’
+                  mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.hello().isWritablePrimary || db.hello().secondary' | grep -q 'true'
             initialDelaySeconds: 5
             periodSeconds: 10
             timeoutSeconds: 5
@@ -158,7 +161,7 @@ spec:
           volumeMounts:
             - name: datadir
               mountPath: /bitnami/mongodb
-              subPath:
+              subPath: 
       volumes:
         - name: datadir
           persistentVolumeClaim:
